# bitcoin-qr-tools

./: .pre-commit-config.yaml  README.md  demo.py  demo_reader.py  pyproject.toml  requirements.in  requirements.txt  setup.py  test.py
.github/workflows/: python-tests.yml
bitcoin_qr_tools/: bitcoin_video_widget.py  converter_xpub.py  cv2camera.py  data.py  i18n.py  multipath_descriptor.py  qr_generator.py  qr_widgets.py  rtsp_camera.py  screen_camera.py  sign_message_request.py  signer_info.py  unified_decoder.py  unified_encoder.py  ur_tools.py  utils.py  video_widget.py
bitcoin_qr_tools/bbqr/: __init__.py  cli.py  consts.py  join.py  split.py  tables.py  utils.py  version.py
bitcoin_qr_tools/gui/: bitcoin_video_widget.py  camera_labels.py  camera_permission.py  qr_widgets.py  video_widget.py
bitcoin_qr_tools/gui/data/: macos_camera_permission.swift
bitcoin_qr_tools/ur/: ur_encoder.py  xoshiro256.py
bitcoin_qr_tools/urtypes/: bytes.py  registry.py
bitcoin_qr_tools/urtypes/cbor/: decoder.py
bitcoin_qr_tools/urtypes/crypto/: account.py  bip39.py  hd_key.py  output.py  psbt.py
bitcoin_qrreader/: bitcoin_qr.py  bitcoin_qr_gui.py  multipath_descriptor.py  qr_qui.py
bitcoin_qrreader/ur/: cbor_lite.py  fountain_decoder.py  fountain_encoder.py  ur_decoder.py  xoshiro256.py
bitcoin_qrreader/urtypes/: __init__.py  bytes.py  registry.py
bitcoin_qrreader/urtypes/cbor/: data.py  encoder.py
bitcoin_qrreader/urtypes/crypto/: account.py  bip39.py  coin_info.py  ec_key.py  hd_key.py  keypath.py  multi_key.py  output.py  psbt.py
tests/: test_all.py  test_bbqr.py  test_bip21.py  test_camera_labels.py  test_camera_permission.py  test_data.py  test_descriptor.py  test_labels.py  test_other.py  test_psbt.py  test_sign_message_request.py  test_signer_info.py  test_signer_ur_tools.py  test_slip132.py  test_video_widget_refresh.py  test_video_widget_scanner.py
tools/: benchmark_qr_detection.py  macos_camera_permission_probe.py
ur/: bytewords.py  crc32.py  fountain_decoder.py  fountain_encoder.py  ur_encoder.py  xoshiro256.py
urtypes/cbor/: decoder.py
urtypes/crypto/: account.py  ec_key.py  hd_key.py  keypath.py  multi_key.py  output.py
