[tool.black]
line-length = 110

[tool.mypy]
no_implicit_optional = false
ignore_missing_imports = true
show_error_codes = true 
disable_error_code = "assignment"



[tool.poetry]
name = "bitcoin-qrreader"
version = "0.7.1"
authors = ["andreasgriffin <andreasgriffin@proton.me>"]
license = "GPL-3.0"
readme = "README.md"
description = "A python bitcoin qr reader"
homepage = "https://github.com/andreasgriffin/bitcoin-qrreader"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pyqt6 = "^6.6.1"
base58 = "2.1.1"
bdkpython ="0.31.0"
pygame ="2.5.0"
pyzbar ="0.1.9"
numpy = "^1.21.0"
mss ="9.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
