[tool.black]
line-length = 110

[tool.mypy]
no_implicit_optional = false
ignore_missing_imports = true
show_error_codes = true 
disable_error_code = "assignment"



[tool.poetry]
name = "bitcoin-qr-tools"
version = "0.9.0"
authors = ["andreasgriffin <andreasgriffin@proton.me>"]
license = "GPL-3.0"
readme = "README.md"
description = "Python bitcoin qr reader and generator"
homepage = "https://github.com/andreasgriffin/bitcoin-qrreader"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pyqt6 = "^6.7.0"
base58 = "2.1.1"
bdkpython ="0.31.0"
pygame ="2.5.2"
numpy = "^1.21.0"
mss ="9.0.1"
hwi = "2.3.1"
pyzbar = "0.1.9"
opencv-python-headless = "^4.9.0.80"
segno = "1.5.3"
pillow = "9.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
