[tool.black]
line-length = 110

 

[tool.poetry]
name = "bitcoin-qr-tools"
version = "1.0.1"
authors = ["andreasgriffin <andreasgriffin@proton.me>"]
license = "GPL-3.0"
readme = "README.md"
description = "Python bitcoin qr reader and generator"
homepage = "https://github.com/andreasgriffin/bitcoin-qrreader"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pyqt6 = "^6.7.0"
base58 = "^2.1.1"
bdkpython ="^0.31.0"
pygame ="^2.6.1"
mss ="^9.0.1"
hwi = "^3.0.0"
pyzbar = "^0.1.9"
segno = "1.6.1"
pyqrcode = "^1.2.1"
pillow = "^10.4.0"
numpy = "^2.0.1"
opencv-python-headless = "^4.10.0.84"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
